test(openapi): add more verifications to customised open api
