# sda-commons-app-example/src/main/java/org/sdase/commons/spring/boot/web/app/example/App.java
@@ -10,6 +10,7 @@ package org.sdase.commons.spring.boot.web.app.example;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import org.sdase.commons.spring.boot.web.error.ApiError;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -24,6 +25,10 @@ public class App {
   }
 
   @GetMapping("myResource")
+  @ApiResponse(
+      description = "Resource not found",
+      content = @Content(schema = @Schema(implementation = ApiError.class)),
+      responseCode = "404")
   @ApiResponse(
       description = "A successful response",
       content = @Content(schema = @Schema(implementation = MyResource.class)),
